--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -2,12 +2,14 @@
 .sign_in-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     min-height: auto;
   }
 
   .sign_up-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     min-height: 106vh;
   }
 
@@ -16,7 +18,7 @@
     justify-content: center;
     align-items: center;
     height: 115vh;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
   }
@@ -27,7 +29,7 @@
     justify-content: center; /* Centra verticalmente */
     align-items: center; /* Centra horizontalmente */
     min-height: 100vh;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
   }
@@ -60,7 +62,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
   }
@@ -81,7 +83,7 @@
     display: flex;
     justify-content: center;
     height: auto;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -92,7 +94,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
   }
@@ -102,7 +104,7 @@
     justify-content: center;
     align-items: center;
     height: auto;
-    background-image: url('../../public/backgroundImage.jpg');
+    background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
   }
