--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -60,11 +60,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     min-height: 100vh;
     background-image: url('../../public/backgroundImage.webp');
     background-size: cover;
     background-position: center;
+  }
+
+  .form-container {
+    width: 200px;
+    height: 200px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
   }
   
   .carousel-container {
@@ -132,11 +139,30 @@
   }
 
   .formBarra {
-    width: 97%;
-    height: auto;
-    padding: 20px;
+    background-color: #0e5c4f;
+    /* background-color: #2d723e; */
+    width: 100%;
+    height: 50px;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .botonOA2 {
     margin-left: auto;
+    padding: 10px 20px;
+    background-color: #1a5493;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-right: 20px;
   }
 
   .botonBarra-container {
