--- a/src/components/Design.css
+++ b/src/components/Design.css
@@ -1,3 +1,82 @@
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chat-messages {
+  max-height: 300px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.chat-message {
+  margin-bottom: 8px;
+}
+
+.chat-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat-form input {
+  flex: 1;
+  padding: 8px;
+}
+
+.chat-form button {
+  padding: 8px;
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+.messages-container {
+  max-height: 300px;
+  overflow-y: scroll;
+}
+.forum-container {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.formForum {
+  display: flex;
+  flex-direction: column;
+}
+
+.formEncuesta {
+  display: flex;
+  flex-direction: column;
+}
+.encuesta-container {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+.formPropuesta {
+  display: flex;
+  flex-direction: column;
+}
+.propuesta-container {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
 
 .sign_in-container {
     display: flex;
